reports/docs/1_datatype/L1_2_string.err.log
Traceback (most recent call last):
  File "C:\anaconda3\envs\abe_website\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\anaconda3\envs\abe_website\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\anaconda3\envs\abe_website\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
my_string = 'It's a brillant future!'
------------------

[1;36m  File [1;32m"C:\Users\vsm71\AppData\Local\Temp\ipykernel_9152\1979304785.py"[1;36m, line [1;32m1[0m
[1;33m    my_string = 'It's a brillant future!'[0m
[1;37m                    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1979304785.py, line 1)

